--- a/animationapp/src/assets/css/style.css
+++ b/animationapp/src/assets/css/style.css
@@ -1,326 +1,384 @@
+@keyframes buttonPlay {
+  0% {
+    transform: translateY(50px);
+    border: 3px solid #b0e0e6;
+    padding-top: 18px;
+    padding-bottom: 18px;
+    padding-left: 63px;
+    padding-right: 63px;
+  }
+  70% {
+    transform: translateY(-20px);
+    color: white;
+    background: #235a83;
+    border: 8px solid #b0e0e6;
+    padding: 25px;
+
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 65px;
+    padding-right: 65px;
+  }
+
+  100% {
+    transform: translateY(0);
+    color: white;
+    background: #235a83;
+    border: 8px solid #b0e0e6;
+    padding-top: 18px;
+    padding-bottom: 18px;
+    padding-left: 63px;
+    padding-right: 63px;
+  }
+}
+
 @keyframes graphButton {
-    50% {
-        transform: translateY(25px);
-    }
-    /* 80% {
+  50% {
+    transform: translateY(25px);
+  }
+  /* 80% {
         transform: translateY(-10px);
     } */
-    /* 70% {
+  /* 70% {
         transform: translateY(-10px);
     } */
- 
-    /* 100% {
+
+  /* 100% {
         transform: translateY(0);
     } */
 }
 @keyframes popup_down {
-    0% {
-      transform: translateY(-20px);
-    }
-    50% {
-      transform: translateY(50px);
-    }
-    100% {
-      transform: translateY(-930px);
-    }
+  0% {
+    transform: translateY(-20px);
   }
-  @keyframes popup_show {
-    0% {
-      transform: translateY(-230px);
-    }
-    50% {
-      transform: translateY(60px);
-    }
-    70% {
-      transform: translateY(-30px);
-    }
-    100% {
-      transform: translateY(0);
-    }
+  50% {
+    transform: translateY(50px);
   }
-  @keyframes headerP {
-    0% {
-      transform: translateY(-30px);
-    }
-    60% {
-      transform: translateY(10px);
-    }
-    100% {
-      transform: translateY(0);
-    }
+  100% {
+    transform: translateY(-930px);
   }
-  
-  @keyframes logo_animationTr {
-    0% {
-      top: 30px;
-      left: 40px;
-      transform: rotate(170deg);
-    }
-    70% {
-      top: 90px;
-      left: -30px;
-      transform: rotate(70deg);
-    }
-    100% {
-      top: 70px;
-      left: -20px;
-    }
+}
+@keyframes popup_show {
+  0% {
+    transform: translateY(-230px);
   }
-  
-  @keyframes logo_animationRes {
-    0% {
-      top: 40px;
-      left: 80px;
-    }
-    70% {
-      top: 30px;
-      left: 160px;
-      transform: rotate(70deg);
-    }
-    100% {
-      top: 20px;
-      left: 140px;
-    }
+  50% {
+    transform: translateY(60px);
   }
-  
-  @keyframes anima {
-    0% {
-      width: 0%;
-    }
-  
-    70% {
-      margin-left: 10px;
-      width: 105%;
-    }
-    100% {
-      width: 100%;
-    }
+  70% {
+    transform: translateY(-30px);
   }
-  
-  @keyframes animaRever {
-    0% {
-      width: 110%;
-    }
-  
-    70% {
-      margin-left: 10px;
-      width: 70%;
-    }
-    100% {
-      width: 0%;
-    }
+  100% {
+    transform: translateY(0);
   }
-  
-  @keyframes card_anima {
-    0% {
-      left: -1000px;
-    }
-    70% {
-      left: 100px;
-    }
-    100% {
-      left: 0;
-    }
+}
+@keyframes headerP {
+  0% {
+    transform: translateY(-30px);
   }
-  .modal_exit {
-    position: absolute;
-    cursor: pointer;
-    transition: 0.4s;
+  60% {
+    transform: translateY(10px);
   }
-  .modal_exit:hover {
-    padding-top: 10px;
+  100% {
+    transform: translateY(0);
   }
-  .another {
-    padding: 0;
-    margin: 0;
-    background: rgba(125, 125, 125, 0.48);
+}
+
+@keyframes logo_animationTr {
+  0% {
+    top: 30px;
+    left: 40px;
+    transform: rotate(170deg);
   }
-  .modal_show {
-    animation-name: popup_show;
-    animation-duration: 1.5s;
+  70% {
+    top: 90px;
+    left: -30px;
+    transform: rotate(70deg);
   }
-  .modal_dowm {
-    animation-name: popup_down;
-    animation-duration: 1.5s;
-  }
-  .modal-window {
-    position: relative;
-    position: absolute;
-    left: 0;
-    right: 0;
-    z-index: 999;
-    opacity: 1;
-    background: #ffffff;
-    border: 1px solid #595959;
-    box-sizing: border-box;
-    box-shadow: 3px 4px 7px rgba(112, 112, 112, 0.25);
-    border-radius: 20px;
-    height: 400px;
-  }
-  .image {
-    position: absolute;
-  }
-  .img_tr {
+  100% {
     top: 70px;
     left: -20px;
-    animation-name: logo_animationTr;
-    animation-duration: 1s;
   }
-  .img_res {
+}
+
+@keyframes logo_animationRes {
+  0% {
+    top: 40px;
+    left: 80px;
+  }
+  70% {
+    top: 30px;
+    left: 160px;
+    transform: rotate(70deg);
+  }
+  100% {
     top: 20px;
     left: 140px;
-    animation-name: logo_animationRes;
-    animation-duration: 1s;
   }
-  .header_logo {
-    position: relative;
+}
+
+@keyframes anima {
+  0% {
+    width: 0%;
   }
-  .header_logo p {
-    position: absolute;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 35px;
-    line-height: 92px;
-    animation-name: headerP;
-    animation-duration: 1s;
-    color: #000000;
+
+  70% {
+    margin-left: 10px;
+    width: 105%;
   }
-  .header_button {
-    transition: 1s;
-    margin-top: 10px;
-    background: none;
-    border: 1px solid black;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    border-radius: 10px;
-    padding-left: 20px;
-    padding-right: 20px;
+  100% {
+    width: 100%;
   }
-  .header_button_hov:hover {
-    background: black;
-    color: white;
+}
+
+@keyframes animaRever {
+  0% {
+    width: 110%;
   }
-  .checkbox_anima__rever {
-    color: black;
-    padding-left: 10px;
-    animation-name: animaRever;
-    animation-duration: 2s;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    background: #ffffff;
-    box-shadow: 3px 4px 7px rgba(112, 112, 112, 0.25);
-    border-radius: 20px;
+
+  70% {
+    margin-left: 10px;
+    width: 70%;
   }
-  
-  .checkbox_anima__all {
-    color: black;
-    padding-top: 15px;
-    padding-left: 10px;
-    animation-name: anima;
-    animation-duration: 1.5s;
-    padding-bottom: 15px;
-    background: #ffffff;
-    box-shadow: 3px 4px 7px rgba(112, 112, 112, 0.25);
-    border-radius: 20px;
+  100% {
+    width: 0%;
   }
-  
-  label {
-    color: #6f6f6f;
+}
+
+@keyframes card_anima {
+  0% {
+    left: -1000px;
   }
-  .checkbox_body {
-    position: absolute;
+  70% {
+    left: 100px;
   }
-  .checkbox_body + label {
-    display: inline-flex;
-    align-items: center;
-    user-select: none;
-    transition: 0.3s all;
-  }
-  .checkbox_body + label::before {
-    transition: 0.3s all;
-    content: "";
-    display: inline-block;
-    width: 1.4em;
-    height: 1.4em;
-    flex-shrink: 0;
-    flex-grow: 0;
-    border: 2px solid #adb5bd;
-    border-radius: 0.25em;
-    margin-right: 0.5em;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: 50% 50%;
-    color: black;
-  }
-  .checkbox_body:not(:disabled):not(:checked) + label:hover::before {
-    border-color: #76e86c;
-    cursor: pointer;
-  }
-  .checkbox_body:not(:disabled):active + label::before {
-    background-color: #b3d7ff;
-    border-color: #b3d7ff;
-  }
-  .checkbox_body:checked + label::before {
-    border-color: #76e86c;
-    background-color: #c7ffa4;
-    color: black;
-    font-size: 20px;
-  }
-  .checkbox_body:focus:not(:checked) + label::before {
-    border-color: #76e86c;
-  }
-  
-  .body_lines {
-    margin-top: 35px;
-  }
-  h2 {
-    margin-bottom: 30px;
-  }
-  .header {
-    margin-top: 20px;
-    margin-bottom: 140px;
-  }
-  .body_about_option {
-    margin-bottom: 200px;
-    margin-top: 100px;
-  }
-  .body_card_animation {
-    animation-name: card_anima;
-    animation-duration: 2s;
+  100% {
     left: 0;
   }
-  .body_about_option__card {
-    position: relative;
-  
-    background: #ffffff;
-    border: 1px solid #e1e1e1;
-    box-sizing: border-box;
-    box-shadow: 3px 4px 7px rgba(112, 112, 112, 0.25);
-    border-radius: 10px;
-    width: 400px;
-    margin-top: 40px;
-  }
-  .body_card__inner {
-    padding-top: 40px;
-    padding-bottom: 60px;
-    padding-left: 40px;
-  }
+}
+.buttonPlayChec {
+  color: white;
+  background: #235a83;
+  border: 8px solid #b0e0e6;
+  border-radius: 10px;
+  transition: 1s all;
+  padding-top: 18px;
+  padding-bottom: 18px;
+  padding-left: 63px;
+  padding-right: 63px;
+}
+.buttonPlayAnim {
+  transition: 1s all;
+  border: 8px solid #b0e0e6;
+  padding-top: 18px;
+  padding-bottom: 18px;
+  padding-left: 63px;
+  padding-right: 63px;
+  animation-name: buttonPlay;
+  animation-duration: 1s;
+}
+.modal_exit {
+  position: absolute;
+  cursor: pointer;
+  transition: 0.4s;
+}
+.modal_exit:hover {
+  padding-top: 10px;
+}
+.another {
+  padding: 0;
+  margin: 0;
+  background: rgba(125, 125, 125, 0.48);
+}
+.modal_show {
+  animation-name: popup_show;
+  animation-duration: 1.5s;
+}
+.modal_dowm {
+  animation-name: popup_down;
+  animation-duration: 1.5s;
+}
+.modal-window {
+  position: relative;
+  position: absolute;
+  left: 0;
+  right: 0;
+  z-index: 999;
+  opacity: 1;
+  background: #ffffff;
+  border: 1px solid #595959;
+  box-sizing: border-box;
+  box-shadow: 3px 4px 7px rgba(112, 112, 112, 0.25);
+  border-radius: 20px;
+  height: 400px;
+}
+.image {
+  position: absolute;
+}
+.img_tr {
+  top: 70px;
+  left: -20px;
+  animation-name: logo_animationTr;
+  animation-duration: 1s;
+}
+.img_res {
+  top: 20px;
+  left: 140px;
+  animation-name: logo_animationRes;
+  animation-duration: 1s;
+}
+.header_logo {
+  position: relative;
+}
+.header_logo p {
+  position: absolute;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 35px;
+  line-height: 92px;
+  animation-name: headerP;
+  animation-duration: 1s;
+  color: #000000;
+}
+.header_button {
+  transition: 1s;
+  margin-top: 10px;
+  background: none;
+  border: 1px solid black;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  border-radius: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.header_button_hov:hover {
+  background: black;
+  color: white;
+}
+.checkbox_anima__rever {
+  color: black;
+  padding-left: 10px;
+  animation-name: animaRever;
+  animation-duration: 2s;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background: #ffffff;
+  box-shadow: 3px 4px 7px rgba(112, 112, 112, 0.25);
+  border-radius: 20px;
+}
+
+.checkbox_anima__all {
+  color: black;
+  padding-top: 15px;
+  padding-left: 10px;
+  animation-name: anima;
+  animation-duration: 1.5s;
+  padding-bottom: 15px;
+  background: #ffffff;
+  box-shadow: 3px 4px 7px rgba(112, 112, 112, 0.25);
+  border-radius: 20px;
+}
+
+label {
+  color: #6f6f6f;
+}
+.checkbox_body {
+  position: absolute;
+}
+.checkbox_body + label {
+  display: inline-flex;
+  align-items: center;
+  user-select: none;
+  transition: 0.3s all;
+}
+.checkbox_body + label::before {
+  transition: 0.3s all;
+  content: "";
+  display: inline-block;
+  width: 1.4em;
+  height: 1.4em;
+  flex-shrink: 0;
+  flex-grow: 0;
+  border: 2px solid #adb5bd;
+  border-radius: 0.25em;
+  margin-right: 0.5em;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 50% 50%;
+  color: black;
+}
+.checkbox_body:not(:disabled):not(:checked) + label:hover::before {
+  border-color: #76e86c;
+  cursor: pointer;
+}
+.checkbox_body:not(:disabled):active + label::before {
+  background-color: #b3d7ff;
+  border-color: #b3d7ff;
+}
+.checkbox_body:checked + label::before {
+  border-color: #76e86c;
+  background-color: #c7ffa4;
+  color: black;
+  font-size: 20px;
+}
+.checkbox_body:focus:not(:checked) + label::before {
+  border-color: #76e86c;
+}
+
+.body_lines {
+  margin-top: 35px;
+}
+h2 {
+  margin-bottom: 30px;
+}
+.header {
+  margin-top: 20px;
+  margin-bottom: 140px;
+}
+.body_about_option {
+  margin-bottom: 200px;
+  margin-top: 100px;
+}
+.body_card_animation {
+  animation-name: card_anima;
+  animation-duration: 2s;
+  left: 0;
+}
+.body_about_option__card {
+  position: relative;
+
+  background: #ffffff;
+  border: 1px solid #e1e1e1;
+  box-sizing: border-box;
+  box-shadow: 3px 4px 7px rgba(112, 112, 112, 0.25);
+  border-radius: 10px;
+  width: 400px;
+  margin-top: 40px;
+}
+.body_card__inner {
+  padding-top: 40px;
+  padding-bottom: 60px;
+  padding-left: 40px;
+}
 .body_graph__button {
-    margin-top: 30px;
+  margin-top: 30px;
 }
 .body_graph__button button:hover {
-transform: translateY(20px);
+  transform: translateY(20px);
 }
-  .body_graph__button button {
-    transition: 0.7s;
-    background: #DEEEF8;
-    border-radius: 10px;
-    border: none;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    padding-left: 60px;
-    padding-right: 60px;
- 
-color: #235A83;
+.body_graph__button button {
+  transition: 0.7s;
+  border-radius: 10px;
+}
+.buttonMain {
+  transition: 1s all;
+  background: #deeef8;
+  border-radius: 10px;
+  border: none;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 60px;
+  padding-right: 60px;
 
-  }
+  color: #235a83;
+}
