--- a/animationapp/src/assets/css/style.css
+++ b/animationapp/src/assets/css/style.css
@@ -1,3 +1,14 @@
+.squiggle {
+  stroke-dasharray: 800;
+  stroke-dashoffset: 800;
+  animation: draw 5s linear infinite ;
+}
+
+@keyframes draw {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
 @keyframes buttonPlay {
   0% {
     transform: translateY(50px);
