--- a/animationapp/src/assets/css/style.css
+++ b/animationapp/src/assets/css/style.css
@@ -1,9 +1,121 @@
+/* // 1 -----  ГРАФИКИ
+
+// // строит графики
+// createGraph(formula, id) {
+//   console.log([formula, id]);
+//   // проба 5
+//   // let result = this.normalFunction(formula, 1);
+//   // console.log(`РЕЗУЛЬТАТ ФУНКЦИИ --- ${result}`);
+
+//   // // проба 6
+
+//   // let doc = document.querySelector(".block").offsetWidth;
+//   // let he = document.querySelector(".block").offsetHeight;
+
+//   // console.log(doc, he);
+//   // // setInterval(function() {
+//   // //   doc = doc + 1
+
+//   // //   document.querySelector('.block').style.width = doc + 'px'
+//   // //   document.querySelector('.block').style.left = doc + 'px'
+//   // // },100)
+//   // // проба
+
+//   // let realX2 = [7, 12, 14];
+//   // let mapReal = realX2.map((item) => {
+//   //   let allMass = [];
+//   //   let x = `let t = ${item}`;
+//   //   let y = x + "; " + formula;
+//   //   let coors = [eval(y), item];
+//   //   allMass.push(coors);
+//   //   return allMass;
+//   // });
+//   // // проба 2
+//   // let c = this.curveBes([0.1, 0.7, 0.5], realX2, mapReal);
+//   // console.log(c);
+//   // console.log(mapReal);
+
+//   // let canvasEx = document.getElementById("canvasEx");
+//   // let ctxe = canvasEx.getContext("2d");
+//   // let ctx = [ctxe, canvasEx];
+//   // ctx[0].beginPath();
+//   // ctx[0].moveTo(0, 0);
+//   // ctx[0].lineWidth = 2;
+//   // ctx[0].lineCap = "round";
+
+//   // // ЧТО ДЕЛАТЬ ------
+//   // //1 ---- easeInQuad
+//   // // ctx[0].quadraticCurveTo(50,200,500,150);
+//   // //2 --- easeOutSine [y, x --- координата искривления, y,x --- конечные точки] []
+//   // //  ctx[0].quadraticCurveTo(500,100,500,400);
+//   // // 3 --- easeInOutCubic
+//   // // ctx[0].bezierCurveTo(10, 500, 400, 200, 500, 500);
+//   // // 4 -- easeOutQuint
+//   // // ctx[0].bezierCurveTo(500, 20, 500, 0, 500, 500);
+//   // // 5 --- парабола
+//   // // ctx[0].bezierCurveTo(0, 0, 500, 250, 0, 500);
+
+//   // // проба 333
+//   // // ctx[0].bezierCurveTo(400, 50, 5, 500, 500, 500);
+//   // // ctx[0].bezierCurveTo(0, 400, 400, 0, 500, 500);
+
+//   // // ПРОБА 3
+
+//   // //  [y,x | y,x | y,x]
+//   // let P1 = [500, 20];
+//   // let P2 = [200, 400];
+
+//   // let coora = this.makeCoors(this.range, [0, 0], P1, P2);
+
+//   // ctx[0].bezierCurveTo(P1[0], P1[1], P2[0], P2[1], 500, 500);
+//   // console.log(coora);
+//   // ctx[0].stroke();
+// },
+
+// ТЕПЕРЬ ПРОБУЕМ НАХОДИТЬ КОООРДИНТАЫЫ
+// makeCoors(t = 1, P0 = [0, 0], P1 = [0, 500], P2 = [500, 0]) {
+//   let x1 = Math.round(
+//     Math.pow(1 - t, 2) * P0[1] +
+//       2 * t * (1 - t) * P1[1] +
+//       Math.pow(t, 2) * P2[1]
+//   );
+//   let y1 = Math.round(
+//     Math.pow(1 - t, 2) * P0[0] +
+//       2 * t * (1 - t) * P1[0] +
+//       Math.pow(t, 2) * P2[0]
+//   );
+
+//   let x = Math.round((1 - t) * P1[1] + t * P2[1]);
+//   let y = Math.round((1 - t) * P1[0] + t * P2[0]);
+//   return [
+//     { x: x, y: y },
+//     { x1: x1, y1: y1 },
+//   ];
+// }, */
+/* // создает канвас
+canvasFun() {
+  // let canvasEx = document.getElementById("canvasEx");
+  // let ctx = canvasEx.getContext("2d");
+  // console.log(ctx);
+  // ctx.translate(0, canvasEx.height);
+  // ctx.rotate(-Math.PI / 2);
+  // return [ctx, canvasEx];
+}, */
 .squiggle {
   stroke-dasharray: 800;
   stroke-dashoffset: 800;
   animation: draw 6s linear infinite ;
 }
-
+.someAnimation {
+  --stroke-dashoffset: 120;
+  stroke-dasharray: 900;
+  stroke-dashoffset: var(--stroke-dashoffset);
+  
+}
+/* .someAnimation {
+  stroke-dasharray: 100;
+  stroke-dashoffset: 100;
+} */
 @keyframes draw {
   to {
     stroke-dashoffset: 0;
